# corgiai

./: .gitignore  README.md  azure.drawio  azure.yml  docker-compose.k8s.yml  docker-compose.yml  makefile  pull_model.Dockerfile
.github/workflows/: cd.yml  corgiai-AutoDeployTrigger-1cc17b4c-4284-4a11-bca7-bb702d10ff7e.yml  corgiai-AutoDeployTrigger-868c58f9-5d07-4238-ada8-cbe2fe8d0665.yml  main_corgiai.yml
apps/CorgiAPI/: CorgiAPI.sln
apps/CorgiAPI/DataLoader/: DataLoader.csproj  Program.cs
apps/CorgiAPI/PromtMaker/: Program.cs  PromptMaker.cs  PromptMaker.csproj
apps/CorgiAPI/QuizAPI/: .gitignore  Dockerfile  Program.cs  QuizAPI.csproj  QuizAPI.http  WeatherForecast.cs  appsettings.Development.json  appsettings.json
apps/CorgiAPI/SemanticKernel.Ollama/: OllamaChatCompletion.cs  OllamaKernelBuilderExtensions.cs  OllamaResults.cs  OllamaTextCompletion.cs  OllamaTextEmbeddingGeneration.cs  OllamaTextResult.cs  SemanticKernel.Ollama.csproj
apps/corgiai/: .env  .env.production  Dockerfile  local.Dockerfile  package.json  start.sh  tailwind.config.js  tailwind.config.ts
apps/corgiai-llm/: Cargo.toml  spin.toml
apps/corgiai-llm/embeddings/: Cargo.toml
apps/corgiai-llm/generate/: Cargo.toml
apps/corgiai-llm/generate/src/: lib.rs
apps/corgiai-spa/: .env  .env.production  .env.tailscale  Dockerfile  index.html  nginx.conf  package.json  tailscale.env.js  tailwind.config.js
apps/corgiai-spa/src/: App.svelte  app.css  vite-env.d.ts
apps/corgiai/src/: app.css  (+2 more)
apps/py-chat/: Dockerfile
apps/py-loader/: Dockerfile  requirements.txt
config/: .env
(+91 files in other folders)
